samples/_failures_safe/1761342870_0f98e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_949ba31f.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_949ba31f.c:171:45: error: expected ‘;’ at end of input
  171 |         case TOKEN_EOF: printf("EOF"); break
      |                                             ^
      |                                             ;
./samples/SAFE/__tmp_949ba31f.c:171:9: error: expected declaration or statement at end of input
  171 |         case TOKEN_EOF: printf("EOF"); break
      |         ^~~~
./samples/SAFE/__tmp_949ba31f.c:171:9: error: expected declaration or statement at end of input
